--- a/test_fred_1/terre.qrc
+++ b/test_fred_1/terre.qrc
@@ -2,4 +2,7 @@
   <qresource prefix="terre_im">
     <file>terre.png</file>
   </qresource>
+  <qresource prefix="terre_gif">
+    <file>200.gif</file>
+  </qresource>
 </RCC>
