--- a/projet_info_4a_fred/project_bis/fenetre2.ui
+++ b/projet_info_4a_fred/project_bis/fenetre2.ui
@@ -470,7 +470,7 @@
        </spacer>
       </item>
       <item>
-       <widget class="QLabel" name="P3_Vache_CO2">
+       <widget class="QLabel" name="P3_Vache_Methane">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
           <horstretch>0</horstretch>
@@ -478,7 +478,7 @@
          </sizepolicy>
         </property>
         <property name="text">
-         <string>CO2 : X %</string>
+         <string>Methane: X %</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
