--- a/projet_graphique/projet_bis/fenetre2.ui
+++ b/projet_graphique/projet_bis/fenetre2.ui
@@ -618,7 +618,7 @@
        </spacer>
       </item>
       <item>
-       <widget class="QLabel" name="P3_Humain_CO2">
+       <widget class="QLabel" name="P3_Humain_pollution">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
           <horstretch>0</horstretch>
@@ -626,7 +626,42 @@
          </sizepolicy>
         </property>
         <property name="text">
-         <string>CO2 : X %</string>
+         <string>Pollution : X %</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+        </property>
+        <property name="indent">
+         <number>20</number>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="verticalSpacer_18">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeType">
+         <enum>QSizePolicy::Fixed</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>5</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QLabel" name="P3_Humain_nv_tech">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string>Nv techologique : X %</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -685,7 +720,7 @@
        </spacer>
       </item>
       <item>
-       <widget class="QLabel" name="P3_Vache_Methane">
+       <widget class="QLabel" name="P3_Vache_pollution">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
           <horstretch>0</horstretch>
