--- a/projet_graphique/projet_graphique/projet_bis/fenetre2.ui
+++ b/projet_graphique/projet_graphique/projet_bis/fenetre2.ui
@@ -253,7 +253,7 @@
          </font>
         </property>
         <property name="text">
-         <string>Terre</string>
+         <string>Hands on Earth</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
